[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-maze"
version = "1.0.0"
description = "Generate 3D mazes defined by 2D mazes cut out of cube faces"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Eric Sibert"}
]
keywords = ["maze", "3d", "cube", "generator", "svg", "scad"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/Eric-FR/hybrid-maze"
Repository = "https://github.com/Eric-FR/hybrid-maze.git"

[project.scripts]
hybrid-maze = "hybrid_maze:main"

[tool.setuptools]
packages = ["hybrid_maze"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint]
max-line-length = 100
